firestore client side only

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Firebase (get from Firebase Console > Project Settings)
-# Client (for Auth + RTDB in browser)
+# Client (browser) - use NEXT_PUBLIC_ prefix so vars are available in browser
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
