latency tests, right click menu

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,15 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 
+# E2E test credentials (used by Playwright tests)
+E2E_TEST_EMAIL=
+E2E_TEST_PASSWORD=
+
+# Optional explicit aliases for user 1
+E2E_TEST_EMAIL_1=
+E2E_TEST_PASSWORD_1=
+
+# Required for true multi-user tests
+E2E_TEST_EMAIL_2=
+E2E_TEST_PASSWORD_2=
+
