--- a/firebase.json
+++ b/firebase.json
@@ -4,5 +4,20 @@
   },
   "database": {
     "rules": "database.rules.json"
+  },
+  "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "database": {
+      "port": 9009
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000
+    }
   }
 }
