--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-konva": "^18.2.10"
   },
   "devDependencies": {
-    "husky": "^9.0.0",
     "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.4.0",
     "@testing-library/react": "^14.2.0",
@@ -31,8 +30,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.0",
+    "dotenv": "^17.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
+    "husky": "^9.0.0",
     "jsdom": "^24.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
