--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-# Firebase (get from Firebase Console > Project Settings)
-# Client (browser) - use NEXT_PUBLIC_ prefix so vars are available in browser
+# Supabase (get from Supabase Dashboard > Settings > API)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# Firebase RTDB only (kept for presence/cursor sync)
 NEXT_PUBLIC_FIREBASE_API_KEY=
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your-project-default-rtdb.firebaseio.com
 
 # E2E test credentials (used by Playwright tests)
 E2E_TEST_EMAIL=
