--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.96.0",
     "firebase": "^10.14.0",
-    "firebase-admin": "^12.0.0",
     "konva": "^9.3.0",
     "next": "14.2.18",
     "react": "^18.2.0",
