cursor runs well

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,13 @@ NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
-# Firebase RTDB only (kept for presence/cursor sync)
+# Firebase — RTDB + Anonymous Auth only (get from Firebase Console > Project Settings)
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
 NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your-project-default-rtdb.firebaseio.com
+
+# Optional: Use Firebase emulators for local development
+# NEXT_PUBLIC_USE_FIREBASE_EMULATOR=true
 
 # E2E test credentials (used by Playwright tests)
 E2E_TEST_EMAIL=
@@ -19,4 +22,3 @@ E2E_TEST_PASSWORD_1=
 # Required for true multi-user tests
 E2E_TEST_EMAIL_2=
 E2E_TEST_PASSWORD_2=
-
