--- a/firebase.json
+++ b/firebase.json
@@ -1,23 +1,8 @@
 {
-  "firestore": {
-    "rules": "firestore.rules"
-  },
-  "database": {
-    "rules": "database.rules.json"
-  },
+  "database": { "rules": "database.rules.json" },
   "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "firestore": {
-      "port": 8080
-    },
-    "database": {
-      "port": 9009
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000
-    }
+    "auth": { "port": 9099 },
+    "database": { "port": 9009 },
+    "ui": { "enabled": true, "port": 4000 }
   }
 }
