--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.96.0",
     "firebase": "^10.14.0",
+    "firebase-functions": "^7.0.5",
     "konva": "^9.3.0",
     "next": "14.2.18",
     "react": "^18.2.0",
