basic AI agentic functionality

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,14 @@ NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your-project-default-rtdb.firebaseio.c
 # Optional: Use Firebase emulators for local development
 # NEXT_PUBLIC_USE_FIREBASE_EMULATOR=true
 
+# OpenAI (required for AI assistant — get from platform.openai.com)
+OPENAI_API_KEY=
+
+# Langfuse (observability for AI agent — get from cloud.langfuse.com or self-hosted)
+# LANGFUSE_SECRET_KEY=sk-lf-...
+# LANGFUSE_PUBLIC_KEY=pk-lf-...
+# LANGFUSE_BASE_URL=https://cloud.langfuse.com
+
 # E2E test credentials (used by Playwright tests)
 E2E_TEST_EMAIL=
 E2E_TEST_PASSWORD=
