--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.96.0",
     "ai": "^6.0.92",
-    "firebase": "^10.14.0",
+    "firebase": "^12.9.0",
     "firebase-functions": "^7.0.5",
     "konva": "^9.3.0",
-    "next": "14.2.18",
+    "next": "^14.2.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
@@ -40,8 +40,8 @@
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.0",
     "dotenv": "^17.3.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.18",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.18",
     "husky": "^9.0.0",
     "jsdom": "^24.0.0",
     "postcss": "^8",
