--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ OPENAI_API_KEY=
 # LANGFUSE_SECRET_KEY=sk-lf-...
 # LANGFUSE_PUBLIC_KEY=pk-lf-...
 # LANGFUSE_BASE_URL=https://cloud.langfuse.com
+# LANGFUSE_RELEASE=0.1.0  # Valid semver; avoids "Invalid argument not valid semver" if empty
 
 # E2E test credentials (used by Playwright tests)
 E2E_TEST_EMAIL=
