readonly db changes

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase (get from Supabase Dashboard > Settings > API)
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Required for anonymous view of public/readonly boards (bypasses RLS)
 SUPABASE_SERVICE_ROLE_KEY=
 
 # Firebase — RTDB + Anonymous Auth only (get from Firebase Console > Project Settings)
