--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "next": "^16.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-konva": "19.0.10",
+    "react-konva": "^18.2.14",
     "zod": "^4.3.6"
   },
   "devDependencies": {
